plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'fabric-loom' version "${fabric_loom_version}"
}

version = rootProject.version
group = rootProject.group
evaluationDependsOn(':common')
def commonMainSourceSet = project(':common').sourceSets.main

base {
    archivesName = "${mod_id}-fabric-${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

sourceSets {
    main {
        java.srcDirs = [project.file('src/main/java')]
        resources.srcDirs = [project.file('src/main/resources')] + commonMainSourceSet.resources.srcDirs
        compileClasspath += commonMainSourceSet.output
        runtimeClasspath += commonMainSourceSet.output
    }
    test {
        java.srcDirs = [project.file('src/test/java')]
        resources.srcDirs = [project.file('src/test/resources')]
        compileClasspath += commonMainSourceSet.output
        runtimeClasspath += commonMainSourceSet.output
    }
}

loom {
    mods {
        register(mod_id) {
            sourceSet commonMainSourceSet
            sourceSet sourceSets.main
        }
    }

    runs {
        client {
            client()
            runDir = 'run/fabric-client'
        }

        server {
            server()
            runDir = 'run/fabric-server'
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = 'Fabric'
        url = 'https://maven.fabricmc.net/'
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"

    implementation project(path: ':common', configuration: 'namedElements')

    testImplementation platform('org.junit:junit-bom:5.14.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('jar', Jar).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from(project(':common').sourceSets.main.output)
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version    : minecraft_version,
            fabric_loader_version: fabric_loader_version,
            fabric_api_version   : fabric_api_version,
            mod_id               : mod_id,
            mod_name             : mod_name,
            mod_license          : mod_license,
            mod_version          : mod_version,
            mod_authors          : mod_authors,
    ]
    inputs.properties replaceProperties

    filesMatching(['fabric.mod.json']) {
        expand replaceProperties + [project: project]
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${rootProject.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
